@@ -274,6 +274,10 @@
     <string name="used_solver">¡Has usado el solucionador para resolver el puzzle!</string>
     <string name="puzzle_not_solved">Este puzzle no tiene solución.</string>
 
+    <string name="solver_hint">Pista</string>
     <string name="hint_confirm">Esto introducirá el valor correcto en la celda seleccionada. ¿Quieres continuar?</string>
     <string name="cannot_give_hint">No puedes obtener una pista para esa celda.</string>
+
+    <string name="check_solvabitily">Comprobar si tiene solución</string>
+    <string name="puzzle_solvable">Este puzzle tiene solución.</string>
 </resources>
