@@ -317,9 +317,10 @@
     <string name="used_solver">You used the solver to see the solution!</string>
     <string name="puzzle_not_solved">This puzzle has no solution.</string>
 
+    <string name="solver_hint">Hint</string>
     <string name="hint_confirm">This will fill in the correct value for the selected cell. Do you want to continue?</string>
     <string name="cannot_give_hint">You cannot get a hint for that cell.</string>
 
     <string name="check_solvabitily">Check Solvability</string>
-    <string name="puzzle_solvable">This puzzle has a solution!</string>
+    <string name="puzzle_solvable">This puzzle has a solution.</string>
 </resources>
